added blue-red message sending through queue, cleanup
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/violet_config.json
+++ b/config/violet_config.json
@@ -7,7 +7,11 @@
       "pasword" : "",
       "inqueue" : "redqueue",
       "outqueue" : "violetqueue"
-    }
+    },
+    "log": {
+      "log_file" : "logs/violet.log",
+      "log_level" : "INFO"
+      }
   },
   "checks" : {
     "check_ping" : "/usr/lib/nagios/plugins/check_ping",
