multiprocessing update; error handlings and code cleaning, new config treatment
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/blue_config.json
+++ b/config/blue_config.json
@@ -1,15 +1,14 @@
 {
-  "configuration" : {
-    "queue" : {
-      "host" : "localhost",
-      "port" : "",
-      "user" : "",
-      "pasword" : "",
-      "outqueue" : "bluequeue"
-    },
-  "log": {
-    "log_file" : "logs/blue.log",
-    "log_level" : "INFO"
-    }
+  "queue" : {
+    "isMQ" : true,
+    "host" : "localhost",
+    "port" : "",
+    "user" : "",
+    "pasword" : "",
+    "outqueue" : "bluequeue"
+  },
+"log": {
+  "log_file" : "logs/blue.log",
+  "log_level" : "INFO"
   }
 }
