grey: first updates. Small fixes
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/violet_config.json
+++ b/config/violet_config.json
@@ -14,6 +14,7 @@
   },
   "checks" : {
     "check_ping" : "/usr/lib/nagios/plugins/check_ping",
-    "check_ssh" : "/usr/lib/nagios/plugins/check_ssh"
+    "check_ssh" : "/usr/lib/nagios/plugins/check_ssh",
+    "check_http" : "/usr/lib/nagios/plugins/check_http"
   }
 }
