initial changes for subsets, many changes in models and services; nagios plugins now are fetched from different paths from config, no static plugin list
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/violet_config.json
+++ b/config/violet_config.json
@@ -12,9 +12,5 @@
     "log_file" : "logs/violet.log",
     "log_level" : "INFO"
   },
-  "checks" : {
-    "check_ping" : "/usr/lib/nagios/plugins/check_ping",
-    "check_ssh" : "/usr/lib/nagios/plugins/check_ssh",
-    "check_http" : "/usr/lib/nagios/plugins/check_http"
-  }
+  "plugin_paths" : "/usr/lib/nagios/plugins/;"
 }
