error handling for getting plugins lists; updated grey - inserting data into status; updated dashboard
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/violet_config.json
+++ b/config/violet_config.json
@@ -12,5 +12,5 @@
     "log_file" : "logs/violet.log",
     "log_level" : "INFO"
   },
-  "plugin_paths" : "/usr/lib/nagios/plugins/;"
+  "plugin_paths" : "/usr/lib/nagios/plugins/;/root"
 }
