initial commit for combining blue and red, a lot of garbage
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/blue_config.json
+++ b/config/blue_config.json
@@ -1,14 +1,7 @@
 {
-  "queue" : {
-    "isMQ" : true,
-    "host" : "localhost",
-    "port" : "",
-    "user" : "",
-    "pasword" : "",
-    "outqueue" : "bluequeue"
-  },
-"log": {
-  "log_file" : "logs/blue.log",
-  "log_level" : "INFO"
-  }
+  "webif_enabled" : true,
+  "log": {
+    "log_file" : "logs/blue.log",
+    "log_level" : "INFO"
+    }
 }
