--- a/config/red_config.json
+++ b/config/red_config.json
@@ -4,7 +4,7 @@
     "port" : "",
     "user" : "",
     "pasword" : "",
-    "inqueue" : "bluequeue",
+    "inqueue" : "",
     "outqueue" : "redqueue"
   },
   "log": {
