discovery for subnets: initial commit
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/blue_config.json
+++ b/config/blue_config.json
@@ -2,6 +2,6 @@
   "webif_enabled" : true,
   "log": {
     "log_file" : "logs/blue.log",
-    "log_level" : "INFO"
+    "log_level" : "DEBUG"
     }
 }
