attempt to move from processes to threads; input MQ channel for violet is still a process; memory consumption is much lower now; problems with thread stopping are still present
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/violet_config.json
+++ b/config/violet_config.json
@@ -1,5 +1,5 @@
 {
-  "process_count" : 96,
+  "process_count" : 32,
   "queue" : {
     "host" : "localhost",
     "port" : "",
@@ -9,7 +9,7 @@
     "outqueue" : "violetqueue"
   },
   "log": {
-    "log_file" : "logs/violet.log",
+    "log_file" : "/home/sp/soft/monit/soft/palette/logs/violet.log",
     "log_level" : "INFO"
   },
   "plugin_paths" : "/usr/lib/nagios/plugins/;/root"
