added initial monitoring vertical menu many small changes
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/red_config.json
+++ b/config/red_config.json
@@ -6,7 +6,8 @@
     "user" : "",
     "pasword" : "",
     "inqueue" : "",
-    "outqueue" : "redqueue"
+    "outqueue" : "redqueue",
+    "monitoring_inqueue" : "violetstats"
   },
   "log": {
     "log_file" : "logs/red.log",
