Added initial monitoring functionality, dashboard updated
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/red_config.json
+++ b/config/red_config.json
@@ -6,8 +6,7 @@
     "user" : "",
     "pasword" : "",
     "inqueue" : "",
-    "outqueue" : "redqueue",
-    "monitoring_inqueue" : "violetstats"
+    "outqueue" : "redqueue"
   },
   "log": {
     "log_file" : "logs/red.log",
