--- a/config/grey_config.json
+++ b/config/grey_config.json
@@ -5,10 +5,12 @@
     "user" : "",
     "pasword" : "",
     "inqueue" : "violetqueue",
-    "outqueue" : ""
+    "outqueue" : "",
+    "monitoring_inqueue" : "violetstats"
   },
   "log": {
     "log_file" : "logs/grey.log",
     "log_level" : "INFO"
-    }
+  },
+  "consumer_amount" : 4
 }
