moved blue to separate project now red will have api monitoring for red and violets now available via red api rrdtool must be 1.6+(thread-safe release)
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/config/grey_config.json
+++ b/config/grey_config.json
@@ -1,9 +1,9 @@
 {
   "queue" : {
     "host" : "localhost",
-    "port" : "",
-    "user" : "",
-    "pasword" : "",
+    "port" : 5672,
+    "user" : "grey",
+    "password" : "grey",
     "inqueue" : "violetqueue",
     "outqueue" : "",
     "monitoring_inqueue" : "violetstats"
