Add subnet logic and subnet discovery to API
config/red_config.json - added configuration for webAPI
core/apitools.py - added validator for subnets
core/models.py - edited subnet model; changed lazy logic for relationships
core/mq.py - added method for sending messages; added common helpers
core/pscheduler.py - corrected automatic fetching of newly added hosts;
                     discovery option is moved to redapi
core/redapi.py - now has separate channel to MQ;
                 added discovery option to API
core/tools.py - all collections on JSON configs are automatically converted to
                dictionaries now, and later to draftClass instances
red.py, red_tornado.py - host and port params are fetched from config now
violet.py - formatting corrections; now several MQ helpers are used

--- a/config/red_config.json
+++ b/config/red_config.json
@@ -1,8 +1,12 @@
 {
   "process_count" : 1,
-  "webapi" : true,
+  "webapi" : {
+    "enabled" : true,
+    "host" : "127.0.0.1",
+    "port" : 5000
+  },
   "queue" : {
-    "host" : "localhost",
+    "host" : "127.0.0.1",
     "port" : 5672,
     "monitoring_port" : 55672,
     "user" : "guest",
