--- a/config/grey_config.json
+++ b/config/grey_config.json
@@ -12,5 +12,6 @@
     "log_file" : "logs/grey.log",
     "log_level" : "INFO"
   },
-  "consumer_amount" : 4
+  "consumer_amount" : 4,
+  "collect_history" : false
 }
