--- a/config/grey_config.json
+++ b/config/grey_config.json
@@ -6,6 +6,7 @@
     "password" : "grey",
     "inqueue" : "violetqueue",
     "outqueue" : "",
+    "vhost" : "pp_vhost",
     "monitoring_inqueue" : "violetstats"
   },
   "log": {
