External configs&loggers and rethinking violet
- now violet service is using thread pools inside processes to execute
tasks. each prcoess has his own incoming and outcoming queues, and own
publisher and consumer for RMQ messages. amount of processes should be
<= to amount of CPUs available. Amount of threads per process is
configurable in config file.
- now configs and loggers are imported from separate file, so added
more loggings to all services. still many additional things should be
logged for DEBUG mode
- a lot of minor corrections

--- a/config/grey_config.json
+++ b/config/grey_config.json
@@ -14,5 +14,6 @@
     "log_level" : "INFO"
   },
   "consumer_amount" : 4,
-  "collect_history" : false
+  "collect_history" : false,
+  "stats_heartbeat" : 3
 }
