--- a/config/red_config.json
+++ b/config/red_config.json
@@ -2,7 +2,7 @@
   "process_count" : 1,
   "webapi" : {
     "enabled" : true,
-    "host" : "localhost",
+    "host" : "127.0.0.1",
     "port" : 5000
   },
   "queue" : {
